# example-cmake-export-target

./: Dockerfile  README.md
cli/: CMakeLists.txt
cli/src/: main.cpp
lib/: CMakeLists.txt
lib/include/calc/: operations.hpp
lib/src/: operations.cpp
